--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,9 @@
         <div class="description">
           <h1 class="title">Le service pour soigner votre technophobie.</h1>
           <p class="text">Le robot intelligent qui s'adapte à vos ressentis et vous aides à vivre avec les nouvelles technologies.</p>
-          <a href="#" class="button">Prendre rdv</a>    
+          <a href="#" class="button hideTablet">Prendre rdv</a>    
         </div>
-        <img src="images/robot.svg">
+        <img src="images/robot.svg" class="robot" alt="robot">
       </section>
 
 
