--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         <a href="#" class="linkHeader hideTablet">Le programme</a>    
         <a href="#" class="linkHeader hideTablet">Les avis</a>    
         <a href="#" class="linkHeader hideTablet">Faire une estimation</a>    
-        <a href="#" class="button">Prendre rdv</a>    
+        <a href="contact.html" class="button">Prendre rdv</a>    
       </div>
     </div>
   </header>
@@ -32,7 +32,7 @@
       <div class="description">
         <h1 class="title">Le service pour soigner votre technophobie.</h1>
         <p class="text">Le robot intelligent qui s'adapte à vos ressentis et vous aide à vivre avec les nouvelles technologies.</p>
-        <a href="#" class="button hideTablet">Prendre rdv</a>    
+        <a href="contact.html" class="button hideTablet">Prendre rdv</a>    
       </div>
       <img src="images/robot.svg" class="robot" alt="robot">
     </section>
