add submit effect

--- a/src/contact.html
+++ b/src/contact.html
@@ -50,9 +50,15 @@
                     <input type="range" min="1" max="10" value="1" name="range" oninput="result4.value=parseInt(range.value)">
                 </div>
 
-                <div class="container_cta">
-                    <a href="" class="button button_resp_bleu">Obtenir un rendez-vous</a>
-                </div>
+                 <button id="submit">
+                  <span class="icon">Envoyé</span>
+                  <span class="text">Submit</span>
+                  <span class="spinner">
+                    <svg width="50" height="50">
+                      <circle r="23" cx="25" cy="25" />
+                    </svg>
+                  </span>
+                </button>
             </form>
         </section>
     </main>
