--- a/src/estimation.html
+++ b/src/estimation.html
@@ -40,9 +40,15 @@
                     <input type="text" placeholder="Peur des robots">
                 </div>
 
-                <div class="container_cta">
-                    <a href="" class="button button_resp_bleu">Obtenir une estimation</a>
-                </div>
+                <button id="submit">
+                  <span class="icon">10 séances</span>
+                  <span class="text">Submit</span>
+                  <span class="spinner">
+                    <svg width="50" height="50">
+                      <circle r="23" cx="25" cy="25" />
+                    </svg>
+                  </span>
+                </button>
             </form>
         </section>
     </main>
