--- a/src/estimation.html
+++ b/src/estimation.html
@@ -42,7 +42,7 @@
 
                 <button id="submit">
                   <span class="icon">10 séances</span>
-                  <span class="text">Submit</span>
+                  <span class="text">Envoyer</span>
                   <span class="spinner">
                     <svg width="50" height="50">
                       <circle r="23" cx="25" cy="25" />
