--- a/src/contact.html
+++ b/src/contact.html
@@ -52,7 +52,7 @@
 
                  <button id="submit">
                   <span class="icon">Envoyé</span>
-                  <span class="text">Submit</span>
+                  <span class="text">Envoyer</span>
                   <span class="spinner">
                     <svg width="50" height="50">
                       <circle r="23" cx="25" cy="25" />
