add link footer

--- a/src/estimation.html
+++ b/src/estimation.html
@@ -77,8 +77,8 @@
       
     </div>
     <div class="container_contact">
-      <a href=""><img src="images/tel.svg" alt="téléphone"></a>
-      <a href=""><img src="images/mail.svg" alt="mail"></a>
+      <a href="tel:+6494461709"><img src="images/tel.svg" alt="téléphone"></a>
+      <a href="mailto:e-volve@e.net"><img src="images/mail.svg" alt="mail"></a>
     </div>
     
     <p class="credit">© e-volve 2418</p>
