--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
       </div>
       
       <div class="cta">
-        <a href="#" class="button">Faire une estimation</a>  
+        <a href="estimation.html" class="button">Faire une estimation</a>  
       </div>
     </section>
     
