--- a/src/contact.html
+++ b/src/contact.html
@@ -26,27 +26,27 @@
             <h2>Prendre rendez-vous en ligne</h2>
             <form action="">
                 <div>
-                    <label for="">nom</label> <br>
+                    <label for="">nom</label>
                     <input type="text" placeholder="Dupont">
                 </div>
 
                 <div>
-                    <label for="">prénom</label> <br>
+                    <label for="">prénom</label>
                     <input type="text" placeholder="Marc">
                 </div>
 
                 <div>
-                    <label for="">mail</label> <br>
+                    <label for="">mail</label>
                     <input type="mail" placeholder="dupontmarc@gmail.com">
                 </div>
 
                 <div>
-                    <label for="">numéro</label> <br>
+                    <label for="">numéro</label>
                     <input type="tel" placeholder="0728947193">
                 </div>
 
                 <div>
-                    <label for="">niveau de technophobie <output name="result4">1</output> sur 10</label> <br>
+                    <label for="">niveau de technophobie <output name="result4">1</output> sur 10</label>
                     <input type="range" min="1" max="10" value="1" name="range" oninput="result4.value=parseInt(range.value)">
                 </div>
 
