--- a/src/estimation.html
+++ b/src/estimation.html
@@ -26,17 +26,17 @@
             <h2>Estimer le nombre de séances</h2>
             <form action="">
                 <div>
-                    <label for="">mail</label> <br>
+                    <label for="">mail</label> 
                     <input type="mail" placeholder="dupontmarc@gmail.com">
                 </div>
 
                 <div>
-                    <label for="">niveau de technophobie <output name="result4">1</output> sur 10</label> <br>
+                    <label for="">niveau de technophobie <output name="result4">1</output> sur 10</label> 
                     <input type="range" min="1" max="10" value="1" name="range" oninput="result4.value=parseInt(range.value)">
                 </div>
 
                 <div>
-                    <label for="">Commentaire à ajouter</label> <br>
+                    <label for="">Commentaire à ajouter</label> 
                     <input type="text" placeholder="Peur des robots">
                 </div>
 
