fix temoignages ancre

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,9 @@
       </div>
     </section>
     
-    <section class="temoignages hideme" id="temoignages">
+    <div id="temoignages"></div>
+
+    <section class="temoignages hideme">
       <div class="imgs">
         <div class="imgs-left">
           <div class="imgs-left-contain">
