--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
 
     <section class="programme">
       <div class="etape">
-        <img src="images/etape.png">
+        <img src="images/illu-1.png">
         <div class="description">
           <span class="subtitle">étape 1</span>
           <h2 class="title">Prenez rdv avec le médecin</h2>
@@ -57,7 +57,7 @@
       </div> 
       
       <div class="etape hideme">
-        <img src="images/etape.png">
+        <img src="images/illu-2.png">
         <div class="description">
           <span class="subtitle">étape 2</span>
           <h2 class="title">Rencontrez Ely</h2>
@@ -66,7 +66,7 @@
       </div> 
       
       <div class="etape">
-        <img src="images/etape.png">
+        <img src="images/illu-3.png">
         <div class="description">
           <span class="subtitle">étape 3</span>
           <h2 class="title">En voie vers la guérison. </h2>
