--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,7 @@
         <div class="oeil-gauche" data-depth="-.1"></div>
         <div class="oeil-droit" data-depth="-.1"></div>
         <img src="images/robot.svg" class="robot" alt="robot">
+        <img src="images/robot_resp.svg" class="robot robot_resp" alt="robot">
       </div>
     </section>
     
